@@ -1,3 +1,11 @@
+2009-03-20  higepon  <higepon@users.sourceforge.jp>
+
+        * scanner.re (Scanner): Fixed the parse of bad string. (thanks to naoya_t)
+
+2009-03-19  higepon  <higepon@users.sourceforge.jp>
+
+        * Patch for build on Windows with VC++ by herumi.
+
 2009-03-18  higepon  <higepon@users.sourceforge.jp>
 
         * Boehm GC 7.1alpha3 => 7.1
